rules/static/rules/static.css
ul.action li a {
    font-weight: bold;
}

div.rule {
    border: solid 1px black;
    padding: 5px;
    color: black;
    background-color: #f0f0f0;
}

ul li span.type {
    color: #585858;
}

div.error {
    font-weight: bold;
    color: red;
    margin: 5px;
}

#sidebar h2 a {
    color: white;
}

#sidebar h2 {
    background: #AD9C9B;
    box-shadow: 5px 5px 5px #bbbbbb;
    border-radius: 4px;
    margin-bottom: 10px;
}

div.detail {
    border: solid 1px black;
    padding: 5px;
    margin: 5px;
    background-color: #f0f0f0;
    display: none;
}

div.table-container {
    width: 100%;
}

table.paleblue {
    width: 100%;
}

td.msg {
    width: 100%;
}

h3 {
    color: white;
    margin-top: 15px;
}

body {
    background: white;
    font-family: Helvetica, Arial, sans-serif;
}

#menu {
    background: #7A1243;

    box-shadow: 5px 5px 5px #bbbbbb;
    border-radius: 4px;
}

#menu a:hover {
    background: #AD9CB9;
}

#menu li#li-about {
    float: right;
}

.title {
    color: #7A1243;
}

#footer {
    border-top-color: #7A1243;
}

a {
    color: black;
}

#logo a {
    color: #AD9C9B;
}

table.paleblue a:link {
    color: grey;
}


table.paleblue a:visited {
    color: #7A1243;
}

table.paleblue tr.odd {
    background-color: #f0f0f0;
}

table.paleblue tr.even {
    background-color: #e0e0e0;
}

table.paleblue + ul.pagination > li > a {
    color: grey;
}

#logo img {
    padding-top: 10px;
}

table.update {
    border-collapse: collapse;
    margin: 20px;
    width: 20em;
}

table.update tr {
    border: solid 1px #AD9C9B;
}

table.update tr.header {
    background-color: #7A1243;
    font-weight: bold;
    color: white;
}

table.update tr td, table.update tr th {
    padding: 5px;
}

table.update td.action_selection {
    text-align: center;
    vertical-align:middle;
}

table.update tr td.check {
    border: solid 1px #AD9C9B;
}

table.update thead th.check {
    border: solid 1px #AD9C9B;
}

div#update {
    width: 30em;
}

div#update input[type="submit"] {
    text-align: right;
    margin-top: 10px;
}

td.suppressed {
    text-decoration: line-through;
}

#logo h1 {
    font-size: 2em;
    text-transform: none;
    padding-left: 10px;
    padding-top: 5px;
}

#logo img {
    margin-left: 0px;
    padding-top: 0px;
}

div#menu {
    margin-left: 45px;
    margin-top: 3px;
    height: 34px;
    width: 905px;
}

h2 {
    font-size: 1.5em;
    font-weight: bold;
}

span.settings {
    float: right;
    margin-right: 5px;
    margin-top: 15px;
    position: relative;
    color: white;
}

span.settings span#setting_menu {
    display: none;
    float: none;
    position: absolute;
    background-color: #AD9C9B;
    margin-top: 0px;
    width: 100px;
    box-shadow: 5px 5px 5px #999999;
    border-radius: 4px;
    padding-top: 3px;
}

span.settings span#setting_menu ul {
    padding-left: 5px;
    margin-right: 5px;
    margin-left: 5px;
    list-style-type: none;
    font-weight: bold;
}

span.settings span#setting_menu ul ul {
    list-style-type: circle;
    padding-left: 3px;
    font-weight: normal;
    margin-left: 10px;
}

span.settings span#setting_menu ul ul li:hover {
    background-color: #726767;
}


.title h2 {
    float:left;
}

span.settings a {
    color: white;
}

